bug: fix display on mobile using flex

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .card {
   width: 900px;
   max-width: 90%;
+  min-height: 95vh;
 }
 
 .github-corner:hover .octo-arm {
