--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,22 @@
 .ngx-editor-textarea {
   border: 0 !important;
 }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.ngx-editor {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.ngx-editor-textarea {
+  flex: 1;
+}
+
+.ngx-editor-grippie svg {
+  display: none;
+}
